Add basic twitch account linking
Fix most rubocop errors as well

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -1,6 +1,8 @@
 development:
   # required to run dev server
   DATABASE_URL: 
+  SRR_TWITCH_CLIENT_ID:
+  SRR_TWITCH_CLENT_SECRET:
 
 test:
   # required to be able to run tests
