Add timesync.js to keep client and server in sync
Count for race timer should be super accurate to what the server thinks it is.  Previously there was insane amounts of time drift from the simple interval.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "SpeedRunRacing",
     "private": true,
     "dependencies": {
-        "moment": "^2.19.2"
+        "moment": "^2.19.2",
+        "timesync": "^0.4.2"
     }
 }
