--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "SpeedRunRacing",
     "private": true,
     "dependencies": {
+        "alertifyjs": "^1.11.0",
         "moment": "^2.19.2",
         "timesync": "^0.4.2"
     }
