--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ node_modules/*
 .DS_store
 
 /coverage/*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
