--- a/.ebextensions/02-yarn.config
+++ b/.ebextensions/02-yarn.config
@@ -1,32 +1,66 @@
-commands:
+files:
+  # If this file is edited, it must be removed from EC2 instance prior to deploy.
+  "/opt/elasticbeanstalk/hooks/appdeploy/pre/09_yarn_install.sh" :
+    mode: "000775"
+    owner: root
+    group: users
+    content: |
+      #!/usr/bin/env bash
 
-  01_node_get:
-    cwd: /tmp
-    command: 'sudo curl --silent --location https://rpm.nodesource.com/setup_8.x | sudo bash -'
+      set -xe
 
-  02_node_install:
-    cwd: /tmp
-    command: 'sudo yum -y install nodejs'
+      EB_APP_STAGING_DIR=$(/opt/elasticbeanstalk/bin/get-config container -k app_staging_dir)
+      EB_APP_USER=$(/opt/elasticbeanstalk/bin/get-config container -k app_user)
 
-  03_yarn_get:
-    cwd: /tmp
-    # don't run the command if yarn is already installed (file /usr/bin/yarn exists)
-    test: '[ ! -f /usr/bin/yarn ] && echo "yarn not installed"'
-    command: 'sudo wget https://dl.yarnpkg.com/rpm/yarn.repo -O /etc/yum.repos.d/yarn.repo'
+      echo "I am: `whoami`"
+      echo "App user is $EB_APP_USER"
 
-  04_yarn_install:
-    cwd: /tmp
-    test: '[ ! -f /usr/bin/yarn ] && echo "yarn not installed"'
-    command: 'sudo yum -y install yarn'
+      # If yarn is not detected, install it.
+      if which yarn; then
+        echo "Skipping installation of yarn -- yarn already installed."
+        echo "yarn --version: `yarn --version`"
+      else
+        echo "which yarn: `which yarn`"
+        echo "Yarn is not installed and accessible."
+        echo "Installing yarn..."
+        # Consider that the EC2 instance is managed by AWS Elastic Beanstalk.
+        # Changes made via SSH WILL BE LOST if the instance is replaced by auto-scaling.
+        # QUESTION: Will this script be run on new instances that are created by auto-scaling?
+        # QUESTION: Should installation be moved to a rake task?
 
-  05_mkdir_webapp_dir:
-    command: mkdir /home/webapp
-    ignoreErrors: true
+        # Download the yarn repo
+        sudo wget https://dl.yarnpkg.com/rpm/yarn.repo -O /etc/yum.repos.d/yarn.repo
+        # Confirm that it downloaded
+        file /etc/yum.repos.d/yarn.repo
 
-  06_chown_webapp_dir:
-    command: chown webapp:webapp /home/webapp
-    ignoreErrors: true
+        # If node is not detected, install it.
+        if [ `node --version` == 'v6.10.0' ]; then
+          echo "Skipping installation of node -- node already installed."
+          echo "node --version: `node --version`"
+        else
+          echo "Installing Node v6.10.0 ..."
+          # Download the Node v6 setup script
+          curl --location https://rpm.nodesource.com/setup_6.x > /home/ec2-user/node_install.sh
+          # Confirm that it downloaded
+          file /home/ec2-user/node_install.sh
+          # Run the Node v6 setup script
+          sudo bash /home/ec2-user/node_install.sh
+          # Install nodejs
+          sudo yum install -y nodejs
+          node --version
+          echo "... and finished installing Node v6.10.0"
+        fi
 
-  07_chmod_webapp_dir:
-    command: chmod 700 /home/webapp
-    ignoreErrors: true
+        # install yarn
+        sudo yum install -y yarn
+        yarn --version
+
+        echo "... and finished installing yarn."
+      fi
+
+      echo "Change directory to $EB_APP_STAGING_DIR"
+      cd $EB_APP_STAGING_DIR
+
+      # yarn install
+      echo "Running yarn install."
+      ./bin/yarn install
