--- a/.ebextensions/03-nginx.config
+++ b/.ebextensions/03-nginx.config
@@ -14,7 +14,7 @@ files:
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
-        server_name *.cmgresearch.net;
+        server_name *.speedrunracing.com;
 
         large_client_header_buffers 8 32k;
 
