--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
     "name": "SpeedRunRacing",
     "private": true,
     "dependencies": {
+        "@rails/webpacker": "3.5",
         "alertifyjs": "^1.11.0",
         "moment": "^2.19.2",
         "timesync": "^0.4.2"
+    },
+    "devDependencies": {
+        "webpack-dev-server": "2.11.2"
     }
 }
