try and fix eb error

--- a/.ebextensions/04-restart_delayed_job.config
+++ b/.ebextensions/04-restart_delayed_job.config
@@ -21,4 +21,4 @@ files:
       # Now we can do the actual restart of the worker. Make sure to have double quotes when using env vars in the command.
       # For Rails 4, replace script/delayed_job with bin/delayed_job
       cd $EB_APP_CURRENT_DIR
-      su -s /bin/bash -c "bundle exec bin/delayed_job --pid-dir=$EB_APP_PIDS_DIR restart" $EB_APP_USER
+      su -s /bin/bash -c "bin/delayed_job --pid-dir=$EB_APP_PIDS_DIR restart" $EB_APP_USER
